refatorando o formulário de cadastro de membros