@@ -1,1 +1,3 @@
 [Log4J Pattern Layout](https://logging.apache.org/log4j/1.2/apidocs/org/apache/log4j/PatternLayout.html)
+
+--add-opens java.base/java.util=ALL-UNNAMED
